...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="com.example.appcommerceclone.model.product.Product"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/dimen_size_medium"
                android:layout_marginTop="@dimen/dimen_size_large"
                android:layout_marginEnd="@dimen/dimen_size_large"
                android:layout_marginBottom="@dimen/dimen_size_large"
                android:text="@string/product_detail_buy_now"
                android:textAppearance="@style/TextAppearance.AppCommerce.Button.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/product_less_detail_add_to_cart"
                app:layout_constraintTop_toBottomOf="@id/product_less_detail_description"/>

...
