<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/padding_extra_large">

    <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/user_login_progression"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:indeterminate="true"
            app:indicatorColor="@color/progress_indicator_color"
            app:indicatorSize="150dp"
            app:layout_constraintBottom_toBottomOf="@+id/user_login_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackColor="@color/progress_track_color"
            app:trackThickness="4dp"/>

    <ImageView
            android:id="@+id/user_login_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_baseline_user_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_extra_large"
            android:layout_marginBottom="@dimen/margin_size_large"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/user_login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_login_profile"
            app:startIconDrawable="@drawable/ic_baseline_user_24"
            app:startIconTint="@color/icon_color_black">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_login_username_text"
                style="@style/AppCommerce.TextAppearance.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_hint_username"
                android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_large"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_login_username"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/icon_color_black">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_login_password_text"
                style="@style/AppCommerce.TextAppearance.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_hint_password"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/user_login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_extra_large"
            android:elevation="@dimen/elevation_small"
            android:text="@string/user_login_btn"
            android:textAppearance="@style/AppCommerce.TextAppearance.Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_password"/>

    <TextView
            android:id="@+id/user_login_no_account_warning"
            style="@style/AppCommerce.TextAppearance.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_extra_large"
            android:text="@string/user_no_account_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_btn"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/user_login_register_btn"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_large"
            android:text="@string/user_register_btn"
            android:textAppearance="@style/AppCommerce.TextAppearance.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_login_no_account_warning"
            app:layout_constraintVertical_bias="0.10"/>

</androidx.constraintlayout.widget.ConstraintLayout>